--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="vendors/foundation/css/foundation.min.css">
+    <link rel="stylesheet" type="text/css" href="http://foundation.zurb.com/assets/css/marketing.css">
   </head>
   <body class="antialiased hide-extras">
     
