added assets from oundation.zurb.com

--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
       </div>
     </div>
 
-
-    <script src="vendors/foundation/js/vendor/jquery.js"></script>
-    <script src="vendors/foundation/js/foundation.min.js"></script>
-    <script srrc="./vendors/foundation/js/foundation/foundation.offcanvas.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
+    <script src="http://foundation.zurb.com/assets/js/modernizr.js"></script>
+    <script src="http://foundation.zurb.com/assets/js/templates.js"></script>
+    <script src="http://foundation.zurb.com/assets/js/marketing.js"></script>
   </body>
 </html>
