--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
 
   <ul class="off-canvas-list">
     <li><label class="first">Learn</label></li>
-    <li><a href="learn/features.html">Features</a></li>
     <li><a href="learn/faq.html">FAQ</a></li>
     <li><a href="learn/case-washington-post.html">Case Studies</a></li>
     <li><a href="learn/website-examples.html">Website Examples</a></li>
     <li><a href="learn/video-started-with-foundation.html">Videos</a></li>
     <li><a href="learn/training.html">Training</a></li>
-    <li><a href="learn/about.html">About</a></li>  
+    <li><a href="learn/about.html">About</a></li>
   </ul>
 
   <hr>
@@ -86,7 +85,7 @@
 
   <ul class="off-canvas-list">
     <li><label>Getting Started</label></li>
-    <li class="gs"><p><a href="docs" class="button">Getting Started</a></p></li>
+    <li class="gs"><p><a href="../univ" class="button">Getting Started</a></p></li>
   </ul>
 
   <hr>
@@ -189,7 +188,7 @@
       </li>
       <li class="divider"></li>
       <li class="has-dropdown">
-        <a href="business/services.html" class="">Business</a>
+        <a href="http://antonio-pierro.github.io/" class="">Antonio Pierro</a>
       </li>
       <li class="divider"></li>
       <li>
@@ -197,14 +196,10 @@
       </li>
       <li class="divider"></li>
       <li class="has-form">
-        <a href="/docs" class="small button">Getting Started</a>
+        <a href="../univ" class="small button">Getting Started</a>
     </ul>
   </section>
 </nav>
-
-        
-
-
 
 <section id="homepage-hero">
 
@@ -219,7 +214,7 @@
 
   <div class="row">
     <div class="large-4 medium-6 columns">
-      <a href="develop/download.html" class="large button hide-for-small">Download Foundation 5</a>
+      <a href="../univ" class="large button hide-for-small">Corsi Universitari</a>
       <a href="develop/download.html" class="small button show-for-small">View Download Options</a>
     </div>
   </div>
@@ -228,10 +223,10 @@
     <div class="small-12 columns">
       <div id="watch">
         <section id="stargazers">
-          <a href="http://github.com/zurb/foundation">16k stargazers</a>
+          <a href="http://github.com/antonio-pierro">1k stargazers</a>
         </section>
         <section id="twitter">
-          <a href="http://twitter.com/zurbfoundation">@ZURBfoundation</a>
+          <a href="http://twitter.com/an_pierro">@an_pierro</a>
         </section>
       </div>
     </div>
